# open-governed-swarm-of-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_QUALITY_ASSESSMENT.md  Dockerfile.feed  Dockerfile.feed.dist  LICENSE  README.md  SECURITY.md  STATUS.md  agents-swarm-governed.code-workspace  docker-compose.public-images.yml  docker-compose.yml  evidence_schemas.yaml  finality.yaml  governance-exp7.yaml  governance.yaml  package.json  pnpm-lock.yaml  propagation.yaml  tsconfig.json  vitest.config.ts
sgrs-core/: .npmignore  Cargo.toml  LICENSE  package-lock.json  package.json  pnpm-lock.yaml  verify-build.cjs
sgrs-core/.cargo/: config.toml
sgrs-core/migrations/: 019_causal_contributions.sql  021_propagation_history.sql
sgrs-core/src/: bridge.rs  error.rs  lib.rs
sgrs-core/src/causal/: contribution.rs  dag.rs  mod.rs  tests.rs  validation.rs
sgrs-core/src/concept/: context.rs  galois.rs  lattice.rs  mod.rs
sgrs-core/src/convergence/: analyze.rs  mod.rs  scores.rs  tests.rs  trajectory.rs
sgrs-core/src/finality/: conditions.rs  gates.rs  goal_score.rs  mod.rs  tests.rs  vector.rs
sgrs-core/src/governance/: kernel.rs  mod.rs  policy.rs  tests.rs
sgrs-core/src/propagation/: contradiction.rs  disagreement.rs  (+11 more)
sgrs-core/tests/: exp_bilattice.rs  exp_dag_dcs.rs  exp_elimination.rs  exp_elimination_topologies.rs  exp_fca_structure.rs  exp_gossip_tarski.rs  exp_gossip_vs_linear.rs  exp_heterogeneous_sheaf.rs  exp_iss.rs  exp_projection.rs  exp_push_sum.rs  exp_spectral.rs  exp_tarski_pareto.rs  prop_bilattice.rs  prop_hybrid_pipeline.rs  scenarios.rs
(+405 files in other folders)
