[package]
name = "sgrs-core"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
ciborium = "0.2"
nalgebra = "0.33"
rand = "0.9"

[dev-dependencies]
proptest = "1"

[build-dependencies]
napi-build = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", priority = -1 }

[lints.clippy]
# Parsing helpers use idiomatic constructors; renaming would break embeddings.
should_implement_trait = "allow"
# N-API FFI mirrors JavaScript call shapes.
too_many_arguments = "allow"

[profile.release]
lto = true
